# telegram-lubix-bot

./: .env  Cargo.toml
.cargo/: config.toml
src/: api.rs  main.rs
