[package]
name = "lubix_bot"
version = "4.0.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# Library Solana
solana-client = "1.18"
solana-sdk = "1.18"
bs58 = "0.5"
base64 = "0.21"
bincode = "1.3"

[profile.dev]
opt-level = 0
debug = false
incremental = false
codegen-units = 1

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1
panic = "abort"